@startuml core_typeclasses_high_level

!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml


package "HKT Core - Type Classes" {
    interface "Kind<F extends WitnessArity<?>, A>" as Kind {
      ' F is the phantom type (e.g., XKind.Witness)
      ' A is the value type
    }
    interface "WitnessArity<A extends TypeArity>" as WitnessArity {}
    interface "Functor<F extends WitnessArity<Unary>>" as Functor {}
    interface "Applicative<F extends WitnessArity<Unary>>" as Applicative {
    }
    interface "Monad<F extends WitnessArity<Unary>>" as Monad {}
    interface "MonadError<F extends WitnessArity<Unary>, E>" as MonadError {}

    interface "Monoid<A>" as Monoid {}

    interface "Traverse<T extends WitnessArity<Unary>>" as Traverse {}

    Kind ..> WitnessArity : F extends
    Functor ..> Kind : (operates on)
    Applicative --|> Functor
    Monad --|> Applicative
    MonadError --|> Monad
    Traverse --|> Functor


}
@enduml

